# devtracker

./: CONTRIBUTING.md  README.md  biome.jsonc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
src/: app.css  app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  settings.rs  tags.rs  timeline.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/tracking/: active_app.rs  git_branch.rs  idle.rs  jira.rs  mod.rs  zoom.rs
src/components/: date-nav.tsx  export-view.tsx  settings.tsx  status-bar.tsx  summary.tsx  tag-editor.tsx  time-block.tsx  timeline.tsx
src/components/ui/: progress.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: use-summary.ts  use-timeline.ts
src/lib/: api.ts  types.ts
